<resources>
    <string name="app_name">sudoku</string>
    <string name="logged_in_as">Eingeloggt als: %1$s</string>
    <string name="not_logged_in">Nicht eingeloggt.</string>
    <string name="loading_stats">Lade Statistik…</string>
    <string name="difficulty_label">Schwierigkeit: %1$s</string>
    <string name="mistakes_label">Fehler: %1$d / 3</string>
    <string name="toast_error">Fehler!</string>
    <string name="time_label">Zeit: %1$02d:%2$02d</string>
    <string name="dialog_title_win">Spiel gewonnen</string>
    <string name="dialog_title_lose">Spiel vorbei</string>
    <string name="dialog_msg_win">Glückwunsch!</string>
    <string name="dialog_msg_lose">3 Fehler erreicht.</string>
    <string name="dialog_positive">NOCHMAL</string>
    <string name="dialog_negative">BEENDEN</string>
    <string name="reset_email_sent">E-Mail wurde gesendet.</string>
    <string name="reset_password_title">Passwort zurücksetzen: %1$s</string>
    <string name="reset_password_sent">E-Mail zum Zurücksetzen wurde gesendet.</string>
    <string name="reset_password_title_fallback">Passwort zurücksetzen</string>
    <string name="reset_email_sent_to">E-Mail zum Zurücksetzen wurde an %1$s gesendet. Öffne den Link in deinem Postfach.</string>
    <string name="back_to_login">ZUM LOGIN</string>
    <string name="error_email_invalid">E-Mail ungültig</string>
    <string name="error_password_short">Passwort zu kurz (min 4)</string>
    <string name="error_password_mismatch">Passwörter stimmen nicht überein</string>
    <string name="error_register_failed">Registrierung fehlgeschlagen</string>
    <string name="register_verify_email_sent">Registrierung erfolgreich. Bitte bestätige deine E-Mail über den Link im Postfach.</string>
    <string name="error_register_verify_send_failed">Bestätigungs-E-Mail konnte nicht gesendet werden.</string>
    <string name="error_login_failed">Login-Daten falsch</string>
    <string name="error_email_not_verified">Bitte zuerst E-Mail bestätigen und dann einloggen.</string>
    <string name="error_reset_failed">Passwort-Reset fehlgeschlagen</string>
    <string name="reset_only_via_email_link">Öffne den Link aus der Reset-E-Mail, um ein neues Passwort zu setzen.</string>
    <string name="stats_header_level">Bereich</string>
    <string name="stats_header_played">Gespielt</string>
    <string name="stats_header_wins">Gewonnen</string>
    <string name="stats_header_avg">Ø Zeit</string>
    <string name="stats_header_best">Bestzeit</string>
    <string name="stats_no_data">Noch keine Spiele vorhanden.</string>
    <string name="menu_welcome">Willkommen</string>
    <string name="menu_title">Hauptmenü</string>
    <string name="menu_start_game">SPIEL STARTEN</string>
    <string name="menu_statistics">STATISTIK</string>
    <string name="menu_settings">EINSTELLUNG</string>
    <string name="stats_title">Deine Statistik</string>
    <string name="stats_load_error">Fehler beim Laden der Statistik.</string>
    </resources>