<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/menu_welcome"
        android:textColor="#1A1A1A"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_title"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartGame"
        style="@style/Widget.Sudoku.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_start_game" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStats"
        style="@style/Widget.Sudoku.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/menu_statistics" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSettings"
        style="@style/Widget.Sudoku.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/menu_settings" />

</LinearLayout>